# MachineID-Manage

./: .gitignore  AGENTS.md  CHANGELOG.md  CHANGELOG.zh.md  COMPATIBILITY_FIXES.md  COMPATIBILITY_REPORT.md  CONTRIBUTING.md  Cargo.toml  DISCLAIMER.md  GITHUB_PUBLISH_GUIDE.md  LICENSE  LICENSE.zh-CN  README.md  README.zh-CN.md  REFACTORING.md  REFACTORING_REPORT.md  SECURITY.md  create-github-repo.ps1  github-publish.ps1  index.html  package-lock.json  package.json  publish-to-github.ps1  tsconfig.json  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.github/workflows/: delete-placeholder.txt  release-trigger.yml  release.yml
.trae/documents/: MachineID-Manage 全面重构计划.md  plan_20260126_203944.md  plan_20260127_182059.md  plan_20260127_205024.md  整理 Windows 系统_用户环境变量.md
e2e/: action-panel.spec.ts  backup-list.spec.ts  modals.spec.ts
scripts/: create-portable.bat  create-portable.ps1  sanitize-release.ps1
src/: App.vue  index.html  main.ts  script.js  style.css
src-tauri/: .gitignore  Cargo.toml  backups.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: machine_id.rs  main.rs
src-tauri/src/platform/: linux.rs  machine_id.rs  macos.rs  mod.rs  permissions.rs  windows.rs
src/application/dto/: backup.dto.ts  machine-id.dto.ts
src/application/services/: backup-application.service.ts  machine-id-application.service.ts
src/components/features/: ActionPanel.vue  BackupList.vue  CurrentMachineId.vue  StatusBar.vue
src/components/layout/: AppFooter.vue  AppHeader.vue
src/components/modals/: GenerateModal.vue  ReplaceModal.vue
src/components/ui/: AlertDialog.vue  Button.vue  ConfirmDialog.vue  PermissionBadge.vue
src/domains/backup/entities/: backup.entity.ts
src/domains/backup/repositories/: backup.repository.ts
src/domains/backup/services/: backup.service.ts
src/domains/backup/value-objects/: backup-id.vo.ts
src/domains/machine-id/entities/: machine-id.entity.ts
src/domains/machine-id/repositories/: machine-id.repository.ts
src/domains/machine-id/services/: machine-id.service.ts
src/domains/machine-id/value-objects/: guid.vo.ts
src/domains/shared/errors/: domain.error.ts
src/domains/shared/types/: entity.type.ts  result.type.ts
src/i18n/: en.json  index.js  zh-CN.json
src/infrastructure/api/: tauri.api.ts
src/infrastructure/repositories/: backup.repository.impl.ts  machine-id.repository.impl.ts
src/presentation/composables/: useBackup.ts  useClipboard.ts  useMachineId.ts
src/stores/: backup.ts  dialog.ts  index.ts  machineId.ts
src/styles/: index.css
src/types/: index.ts
src/utils/: index.ts  utils.test.ts
tests/bdd/features/: backup.feature  generate.feature  machine-id.feature  replace.feature
tests/data/: guid-test-data.ts
tests/security/: data-sanitization.spec.ts
tests/unit/components/: ActionPanel.spec.ts  BackupList.spec.ts  GenerateModal.spec.ts  ReplaceModal.spec.ts
tests/unit/domains/machine-id/: guid.vo.spec.ts  machine-id.entity.spec.ts
tests/unit/domains/shared/: result.type.spec.ts
tests/unit/platform/: permissions.spec.ts
tests/unit/stores/: backup.store.spec.ts  dialog.store.spec.ts  machineId.store.spec.ts
