[workspace]
members = ["src-tauri"]
resolver = "2"

[workspace.package]
version = "2.2.0"
edition = "2021"
authors = ["MachineID-Manage Contributors"]
description = "A machine code manager for Windows systems"
repository = "https://github.com/luxiaosen8/MachineID-Manage"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
